force-app/main/default/objects/Booking__c/fields/ActualEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>ActualEventRevenue10__c</fullName>
    <label>Actual Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>