force-app/main/default/objects/Booking__c/fields/ActualEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>ActualEventRevenue11__c</fullName>
    <label>Actual Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>