force-app/main/default/objects/Booking__c/fields/ActualEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>ActualEventRevenue12__c</fullName>
    <label>Actual Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>