force-app/main/default/objects/Booking__c/fields/ActualEventRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ActualEventRevenueTotal__c</fullName>
    <label>Actual Event Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>