force-app/main/default/objects/Booking__c/fields/ActualGuestroomRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ActualGuestroomRevenueTotal__c</fullName>
    <label>Actual Guestroom Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>