force-app/main/default/objects/Booking__c/fields/ActualMaxAttendance__c.field-meta.xml
<CustomField>
    <fullName>ActualMaxAttendance__c</fullName>
    <label>Actual Max Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>