force-app/main/default/objects/Booking__c/fields/ActualRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>ActualRevenueTotal__c</fullName>
    <label>Actual Revenue Total</label>
    <description>The sum total of all actual event revenues, calculated for each event item as the actual quantity multiplied by the item price</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>