force-app/main/default/objects/Booking__c/fields/AdditionalSalesManager__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSalesManager__c</fullName>
    <label>Additional Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdditionalSalesManager_Booking</relationshipName>
    <relationshipLabel>AdditionalSalesManager (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>