force-app/main/default/objects/Booking__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Agency_Booking</relationshipName>
    <relationshipLabel>Agency (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>