force-app/main/default/objects/Booking__c/fields/AgreedAverageDailyRate__c.field-meta.xml
<CustomField>
    <fullName>AgreedAverageDailyRate__c</fullName>
    <label>Agreed ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>