force-app/main/default/objects/Booking__c/fields/AgreedGuestroomRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AgreedGuestroomRevenueTotal__c</fullName>
    <label>Agreed Guestroom Revenue Total</label>
    <description>The sum total of all agreed guestroom revenues, based on the contracted guestroom quantities and rates</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>