force-app/main/default/objects/Booking__c/fields/AgreedMaxAttendance__c.field-meta.xml
<CustomField>
    <fullName>AgreedMaxAttendance__c</fullName>
    <label>Agreed Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>