force-app/main/default/objects/Booking__c/fields/AgreedRoomnightsTotal__c.field-meta.xml
<CustomField>
    <fullName>AgreedRoomnightsTotal__c</fullName>
    <label>Total Roomnights Agreed</label>
    <description>The sum total of all agreed guestrooms for the booking</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>