force-app/main/default/objects/Booking__c/fields/ArrivalDate__c.field-meta.xml
<CustomField>
    <fullName>ArrivalDate__c</fullName>
    <label>Arrival</label>
    <type>Date</type>
    <required>true</required>
</CustomField>