force-app/main/default/objects/Booking__c/fields/AtDefiniteActualEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteActualEventRevenue10__c</fullName>
    <label>At Definite Actual Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>