force-app/main/default/objects/Booking__c/fields/AtDefiniteActualEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteActualEventRevenue11__c</fullName>
    <label>At Definite Actual Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>