force-app/main/default/objects/Booking__c/fields/AtDefiniteActualEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteActualEventRevenue12__c</fullName>
    <label>At Definite Actual Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>