force-app/main/default/objects/Booking__c/fields/AtDefiniteActualEventRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteActualEventRevenueTotal__c</fullName>
    <label>At Definite Actual Event Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>