force-app/main/default/objects/Booking__c/fields/AtDefiniteActualRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteActualRevenueTotal__c</fullName>
    <label>At Definite Actual Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>