force-app/main/default/objects/Booking__c/fields/AtDefiniteAgreedADR__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteAgreedADR__c</fullName>
    <label>At Definite Agreed ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>