force-app/main/default/objects/Booking__c/fields/AtDefiniteAgreedGuestroomRevenue__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteAgreedGuestroomRevenue__c</fullName>
    <label>At Definite Agreed Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>