force-app/main/default/objects/Booking__c/fields/AtDefiniteAgreedRoomnights__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteAgreedRoomnights__c</fullName>
    <label>At Definite Agreed Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>