force-app/main/default/objects/Booking__c/fields/AtDefiniteBlendedEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteBlendedEventRevenue10__c</fullName>
    <label>At Definite Blended Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>