force-app/main/default/objects/Booking__c/fields/AtDefiniteBlendedEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteBlendedEventRevenue11__c</fullName>
    <label>At Definite Blended Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>