force-app/main/default/objects/Booking__c/fields/AtDefiniteBlendedEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteBlendedEventRevenue12__c</fullName>
    <label>At Definite Blended Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>