force-app/main/default/objects/Booking__c/fields/AtDefiniteBlendedEventRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteBlendedEventRevenueTotal__c</fullName>
    <label>At Definite Blended Event Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>