force-app/main/default/objects/Booking__c/fields/AtDefiniteBlockedADR__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteBlockedADR__c</fullName>
    <label>At Definite Blocked ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>