force-app/main/default/objects/Booking__c/fields/AtDefiniteBlockedGuestroomRevenue__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteBlockedGuestroomRevenue__c</fullName>
    <label>At Definite Blocked Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>