force-app/main/default/objects/Booking__c/fields/AtDefiniteBlockedRoomnights__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteBlockedRoomnights__c</fullName>
    <label>At Definite Blocked Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>