force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastADR__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastADR__c</fullName>
    <label>At Definite Forecasted ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>