force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastEventRevenue10__c</fullName>
    <label>At Definite Forecast Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>