force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastEventRevenue11__c</fullName>
    <label>At Definite Forecast Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>