force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastEventRevenue12__c</fullName>
    <label>At Definite Forecast Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>