force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastEventRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastEventRevenueTotal__c</fullName>
    <label>At Definite Forecasted Event Rev Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>