force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastGuestroomRevenue__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastGuestroomRevenue__c</fullName>
    <label>At Definite Forecasted Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>