force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastRevenueTotal__c</fullName>
    <label>At Definite Forecasted Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>