force-app/main/default/objects/Booking__c/fields/AtDefiniteForecastRoomnights__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteForecastRoomnights__c</fullName>
    <label>At Definite Forecasted Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>