force-app/main/default/objects/Booking__c/fields/AtDefiniteGuestroomRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteGuestroomRevenueTotal__c</fullName>
    <label>At Definite Guestroom Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>