force-app/main/default/objects/Booking__c/fields/AtDefinitePickupADR__c.field-meta.xml
<CustomField>
    <fullName>AtDefinitePickupADR__c</fullName>
    <label>At Definite Pickup ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>