force-app/main/default/objects/Booking__c/fields/AtDefinitePickupGuestroomRevenue__c.field-meta.xml
<CustomField>
    <fullName>AtDefinitePickupGuestroomRevenue__c</fullName>
    <label>At Definite Pickup Guestroom Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>