force-app/main/default/objects/Booking__c/fields/AtDefinitePickupRoomnights__c.field-meta.xml
<CustomField>
    <fullName>AtDefinitePickupRoomnights__c</fullName>
    <label>At Definite Pickup Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>