force-app/main/default/objects/Booking__c/fields/AtDefiniteProjectedEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteProjectedEventRevenue10__c</fullName>
    <label>At Definite Projected Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>