force-app/main/default/objects/Booking__c/fields/AtDefiniteProjectedEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteProjectedEventRevenue11__c</fullName>
    <label>At Definite Projected Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>