force-app/main/default/objects/Booking__c/fields/AtDefiniteProjectedEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteProjectedEventRevenue12__c</fullName>
    <label>At Definite Projected Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>