force-app/main/default/objects/Booking__c/fields/AtDefiniteProjectedEventRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteProjectedEventRevenueTotal__c</fullName>
    <label>At Definite Projected Event Rev Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>