force-app/main/default/objects/Booking__c/fields/AtDefiniteProjectedRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>AtDefiniteProjectedRevenueTotal__c</fullName>
    <label>At Definite Projected Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>