force-app/main/default/objects/Booking__c/fields/BillingInformationComments__c.field-meta.xml
<CustomField>
    <fullName>BillingInformationComments__c</fullName>
    <label>Billing Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>