force-app/main/default/objects/Booking__c/fields/BillingInformationName3__c.field-meta.xml
<CustomField>
    <fullName>BillingInformationName3__c</fullName>
    <label>Master Billing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Individual Pays Own</fullName>
            </value>
            <value>
                <fullName>Bill to Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>