force-app/main/default/objects/Booking__c/fields/BlendedGuestroomRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>BlendedGuestroomRevenueTotal__c</fullName>
    <label>Blended Guestroom Revenue Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>