force-app/main/default/objects/Booking__c/fields/BlockedAverageDailyRate__c.field-meta.xml
<CustomField>
    <fullName>BlockedAverageDailyRate__c</fullName>
    <label>Blocked ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>