force-app/main/default/objects/Booking__c/fields/BlockedGuestroomRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>BlockedGuestroomRevenueTotal__c</fullName>
    <label>Blocked Guestroom Revenue Total</label>
    <description>The sum total of all blocked guestroom revenues, based on the quantity of guestrooms removed from inventory</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>