force-app/main/default/objects/Booking__c/fields/BlockedRoomnightsTotal__c.field-meta.xml
<CustomField>
    <fullName>BlockedRoomnightsTotal__c</fullName>
    <label>Total Roomnights Blocked</label>
    <description>The sum total of all blocked guestrooms for the booking</description>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>