force-app/main/default/objects/Booking__c/fields/BookedDate__c.field-meta.xml
<CustomField>
    <fullName>BookedDate__c</fullName>
    <label>Booked</label>
    <type>Date</type>
    <required>true</required>
</CustomField>