force-app/main/default/objects/Booking__c/fields/BookingAgent__c.field-meta.xml
<CustomField>
    <fullName>BookingAgent__c</fullName>
    <label>Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>BookingAgent_Booking</relationshipName>
    <relationshipLabel>BookingAgent (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>