force-app/main/default/objects/Booking__c/fields/BookingContact__c.field-meta.xml
<CustomField>
    <fullName>BookingContact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>BookingContact_Booking</relationshipName>
    <relationshipLabel>BookingContact (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>