force-app/main/default/objects/Booking__c/fields/BookingMarketSegmentName__c.field-meta.xml
<CustomField>
    <fullName>BookingMarketSegmentName__c</fullName>
    <label>Mkt Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>In House</fullName>
            </value>
            <value>
                <fullName>SMERF</fullName>
            </value>
            <value>
                <fullName>Tour &amp; Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>