force-app/main/default/objects/Booking__c/fields/BookingPolicyId__c.field-meta.xml
<CustomField>
    <fullName>BookingPolicyId__c</fullName>
    <label>Booking Policy</label>
    <length>36</length>
    <type>Text</type>
</CustomField>