force-app/main/default/objects/Booking__c/fields/BookingStatus__c.field-meta.xml
<CustomField>
    <fullName>BookingStatus__c</fullName>
    <label>Status</label>
    <description>To change the status, save the booking and then click the Change Status button.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Tentative</fullName>
            </value>
            <value>
                <fullName>Definite</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>TurnedDown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>