force-app/main/default/objects/Booking__c/fields/BookingTypeName__c.field-meta.xml
<CustomField>
    <fullName>BookingTypeName__c</fullName>
    <label>Booking Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Citywide</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Tournament</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>Incentive</fullName>
            </value>
            <value>
                <fullName>Tour</fullName>
            </value>
            <value>
                <fullName>Overflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>