force-app/main/default/objects/Booking__c/fields/BuisnessLostDate__c.field-meta.xml
<CustomField>
    <fullName>BuisnessLostDate__c</fullName>
    <label>Business Lost Date</label>
    <type>Date</type>
</CustomField>