force-app/main/default/objects/Booking__c/fields/BypassMoveRulesUntil__c.field-meta.xml
<CustomField>
    <fullName>BypassMoveRulesUntil__c</fullName>
    <label>Bypass Move Rules Until</label>
    <description>Allows the manipulation of dates at the booking, room block, and event level to repair out-of-range situations.</description>
    <type>DateTime</type>
</CustomField>