force-app/main/default/objects/Booking__c/fields/CalculateEventRevenue__c.field-meta.xml
<CustomField>
    <fullName>CalculateEventRevenue__c</fullName>
    <label>Calculate Event Revenue</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>