force-app/main/default/objects/Booking__c/fields/CalculateGuestroomRevenue__c.field-meta.xml
<CustomField>
    <fullName>CalculateGuestroomRevenue__c</fullName>
    <label>Calculate Guestroom Revenue</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>