force-app/main/default/objects/Booking__c/fields/CateringManager__c.field-meta.xml
<CustomField>
    <fullName>CateringManager__c</fullName>
    <label>Catering Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CateringManager_Booking</relationshipName>
    <relationshipLabel>CateringManager (Booking)</relationshipLabel>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>