force-app/main/default/objects/Booking__c/fields/ChannelName__c.field-meta.xml
<CustomField>
    <fullName>ChannelName__c</fullName>
    <label>Channel Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>