force-app/main/default/objects/Booking__c/fields/CommissionPercentage__c.field-meta.xml
<CustomField>
    <fullName>CommissionPercentage__c</fullName>
    <label>Commission %</label>
    <description>If the booking is marked as commissionable, this is the percentage of total booking revenue owed to the booking agent</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>