force-app/main/default/objects/Booking__c/fields/ConfirmationNumber__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationNumber__c</fullName>
    <label>Confirmation #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>