force-app/main/default/objects/Booking__c/fields/CurrentBlendedADR__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedADR__c</fullName>
    <label>Blended ADR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>