force-app/main/default/objects/Booking__c/fields/CurrentBlendedEventRevenue10__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedEventRevenue10__c</fullName>
    <label>Blended Event Revenue 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>