force-app/main/default/objects/Booking__c/fields/CurrentBlendedEventRevenue11__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedEventRevenue11__c</fullName>
    <label>Blended Event Revenue 11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>