force-app/main/default/objects/Booking__c/fields/CurrentBlendedEventRevenue12__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedEventRevenue12__c</fullName>
    <label>Blended Event Revenue 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>