force-app/main/default/objects/Booking__c/fields/CurrentBlendedRevenueTotal__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedRevenueTotal__c</fullName>
    <label>Blended Revenue Total</label>
    <description>The sum total of all blended event revenues, calculated for each event as the rollup of either Forecast or Actual revenue based on the Event &apos;Complete&apos; flag&apos;.  (If Event is flagged as &apos;Complete&apos; then use Actual, else use Forecast)</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>