force-app/main/default/objects/Booking__c/fields/CurrentBlendedRoomnightsTotal__c.field-meta.xml
<CustomField>
    <fullName>CurrentBlendedRoomnightsTotal__c</fullName>
    <label>Blended Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>