force-app/main/default/objects/Booking__c/fields/CutoffDate__c.field-meta.xml
<CustomField>
    <fullName>CutoffDate__c</fullName>
    <label>Cutoff Date</label>
    <type>Date</type>
</CustomField>