force-app/main/default/objects/Booking__c/fields/DateDefinite__c.field-meta.xml
<CustomField>
    <fullName>DateDefinite__c</fullName>
    <label>Date Definite</label>
    <type>Date</type>
</CustomField>