force-app/main/default/objects/Booking__c/fields/DateLost__c.field-meta.xml
<CustomField>
    <fullName>DateLost__c</fullName>
    <label>Date Lost</label>
    <type>Date</type>
</CustomField>