force-app/main/default/objects/Booking__c/fields/DatePickupComplete__c.field-meta.xml
<CustomField>
    <fullName>DatePickupComplete__c</fullName>
    <label>Date Pickup Complete</label>
    <type>Date</type>
</CustomField>