force-app/main/default/objects/Booking__c/fields/DateTentative__c.field-meta.xml
<CustomField>
    <fullName>DateTentative__c</fullName>
    <label>Date Tentative</label>
    <type>Date</type>
</CustomField>