force-app/main/default/objects/Booking__c/fields/DateTurnedDown__c.field-meta.xml
<CustomField>
    <fullName>DateTurnedDown__c</fullName>
    <label>Date Turned Down</label>
    <type>Date</type>
</CustomField>