force-app/main/default/objects/Booking__c/fields/DecisionDate__c.field-meta.xml
<CustomField>
    <fullName>DecisionDate__c</fullName>
    <label>Decision Due</label>
    <type>Date</type>
</CustomField>