force-app/main/default/objects/Booking__c/fields/DepartureDate__c.field-meta.xml
<CustomField>
    <fullName>DepartureDate__c</fullName>
    <label>Departure</label>
    <type>Date</type>
    <required>true</required>
</CustomField>