force-app/main/default/objects/Booking__c/fields/DirectBookAccountExternalId__c.field-meta.xml
<CustomField>
    <fullName>DirectBookAccountExternalId__c</fullName>
    <label>DirectBook AccountExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>