force-app/main/default/objects/Booking__c/fields/DirectBookCity__c.field-meta.xml
<CustomField>
    <fullName>DirectBookCity__c</fullName>
    <label>DirectBook City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>