force-app/main/default/objects/Booking__c/fields/DirectBookCompanyName__c.field-meta.xml
<CustomField>
    <fullName>DirectBookCompanyName__c</fullName>
    <label>DirectBook Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>