force-app/main/default/objects/Booking__c/fields/DirectBookContactExternalId__c.field-meta.xml
<CustomField>
    <fullName>DirectBookContactExternalId__c</fullName>
    <label>DirectBook ContactExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>