force-app/main/default/objects/Booking__c/fields/DirectBookContactType__c.field-meta.xml
<CustomField>
    <fullName>DirectBookContactType__c</fullName>
    <label>DirectBook ContactType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>