force-app/main/default/objects/Booking__c/fields/DirectBookCountry__c.field-meta.xml
<CustomField>
    <fullName>DirectBookCountry__c</fullName>
    <label>DirectBook Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>