force-app/main/default/objects/Booking__c/fields/DirectBookEmail__c.field-meta.xml
<CustomField>
    <fullName>DirectBookEmail__c</fullName>
    <label>DirectBook Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>