force-app/main/default/objects/Booking__c/fields/DirectBookFirstName__c.field-meta.xml
<CustomField>
    <fullName>DirectBookFirstName__c</fullName>
    <label>DirectBook First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>