force-app/main/default/objects/Booking__c/fields/DirectBookLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>DirectBookLanguageCode__c</fullName>
    <label>DirectBook LanguageCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>