force-app/main/default/objects/Booking__c/fields/DirectBookLastName__c.field-meta.xml
<CustomField>
    <fullName>DirectBookLastName__c</fullName>
    <label>DirectBook Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>