force-app/main/default/objects/Booking__c/fields/DirectBookMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>DirectBookMobilePhone__c</fullName>
    <label>DirectBook Mobile Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>